RESOLVED FIXED54559
[chromium] Fix green pixels at edge of certain GPU-accelerated videos
https://bugs.webkit.org/show_bug.cgi?id=54559
Summary [chromium] Fix green pixels at edge of certain GPU-accelerated videos
Victoria Kirst
Reported 2011-02-16 08:28:59 PST
[chromium] Fix green pixels at edge of certain GPU-accelerated videos
Attachments
Patch (11.07 KB, patch)
2011-02-16 08:31 PST, Victoria Kirst
no flags
Patch (16.36 KB, patch)
2011-02-16 13:55 PST, Victoria Kirst
no flags
Patch (16.36 KB, patch)
2011-02-16 16:26 PST, Victoria Kirst
no flags
Victoria Kirst
Comment 1 2011-02-16 08:31:53 PST
Andrew Scherkus
Comment 2 2011-02-16 09:35:44 PST
Comment on attachment 82643 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=82643&action=review > Source/WebCore/platform/graphics/chromium/VideoLayerChromium.cpp:316 > + float deadPixelsPerRow = planeTextureSize.width() - frameWidth; does this need to be float? I think planeTextureSize and frameWidth are both ints > Source/WebCore/platform/graphics/chromium/VideoLayerChromium.cpp:394 > + // Artibitrarily take the u sizes because u and v dimensions are identical. Artibitrarily -> Arbitrarily
Victoria Kirst
Comment 3 2011-02-16 13:55:51 PST
Victoria Kirst
Comment 4 2011-02-16 14:01:41 PST
Updated patch to reflect Andrew's suggested changes, and subtracts 2 from Y plane's width instead of 1 in YV12 case. Also moved some of the logic to VideoFrameChromium and did some refactoring there for a cleaner solution.
Kenneth Russell
Comment 5 2011-02-16 14:06:17 PST
Comment on attachment 82687 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=82687&action=review I'll be happy to r+ this once a member of the video stack team signs off on it. One minor stylistic comment. > Source/WebCore/platform/graphics/chromium/VideoLayerChromium.cpp:313 > + frameWidth--; Prefer predecrement in WebKit. (i.e., --frameWidth)
Andrew Scherkus
Comment 6 2011-02-16 16:19:31 PST
I ran some tests using a static YUV test image and this patch is good to go! On width==stride videos we have pixel-accurate scaling as expected. On width<stride videos we _do_ end up scaling the video horizontally by one pixel (i.e., right-most pixel line is gone!) but Y and UV planes are still in sync which is the important part.
Victoria Kirst
Comment 7 2011-02-16 16:26:17 PST
Victoria Kirst
Comment 8 2011-02-16 16:33:50 PST
Thanks for all the help with the bug and for writing a way to test it, Andrew! kbr: Thanks for reviewing! I fixed the nit in my latest uploaded patch. (Also made a minor adjustment to the CL description; otherwise kept the same.)
Kenneth Russell
Comment 9 2011-02-16 17:10:27 PST
Comment on attachment 82719 [details] Patch Sounds good. r=me
WebKit Commit Bot
Comment 10 2011-02-16 20:42:00 PST
The commit-queue encountered the following flaky tests while processing attachment 82719 [details]: http/tests/websocket/tests/multiple-connections.html bug 53825 (author: abarth@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 11 2011-02-16 20:44:47 PST
Comment on attachment 82719 [details] Patch Clearing flags on attachment: 82719 Committed r78787: <http://trac.webkit.org/changeset/78787>
WebKit Commit Bot
Comment 12 2011-02-16 20:44:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.