2011-02-16  Victoria Kirst  <vrk@google.com>

Reviewed by Kenneth Russell.

        [chromium] Fix green pixels at edge of certain GPU-accelerated videos
        https://bugs.webkit.org/show_bug.cgi?id=54559

        Adds logic to properly resize the range of YUV textures to only
        select legitimate values.

        * platform/graphics/chromium/VideoFrameChromium.h:
        * platform/graphics/chromium/VideoLayerChromium.cpp:
        (WebCore::VideoLayerChromium::SharedValues::SharedValues):
        (WebCore::VideoLayerChromium::allocateTexturesIfNeeded):
        (WebCore::VideoLayerChromium::drawYUV):
        * platform/graphics/chromium/VideoLayerChromium.h:
        (WebCore::VideoLayerChromium::SharedValues::yWidthScaleFactorLocation):
        (WebCore::VideoLayerChromium::SharedValues::uvWidthScaleFactorLocation):
2011-02-16  Victoria Kirst  <vrk@google.com>

        Reviewed by Kenneth Russell.

        [chromium] Fix green pixels at edge of certain GPU-accelerated videos
        https://bugs.webkit.org/show_bug.cgi?id=54559

        * src/VideoFrameChromiumImpl.cpp:
        (WebKit::VideoFrameChromiumImpl::width):
        (WebKit::VideoFrameChromiumImpl::height):
        (WebKit::VideoFrameChromiumImpl::requiredTextureSize):
        (WebKit::VideoFrameChromiumImpl::hasPaddingBytes):
        * src/VideoFrameChromiumImpl.h:

Canonical link: https://commits.webkit.org/68754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78787 268f45cc-cd09-0410-ab3c-d52691b4dbfc