Source/WebKit/chromium/src/VideoFrameChromiumImpl.h
@@ -52,12 +52,15 @@ public:
     virtual SurfaceType surfaceType() const;
     virtual Format format() const;
     virtual unsigned width() const;
+    virtual unsigned width(unsigned plane) const;
     virtual unsigned height() const;
+    virtual unsigned height(unsigned plane) const;
     virtual unsigned planes() const;
     virtual int stride(unsigned plane) const;
     virtual const void* data(unsigned plane) const;
     virtual unsigned texture(unsigned plane) const;
     virtual const IntSize requiredTextureSize(unsigned plane) const;
+    virtual bool hasPaddingBytes(unsigned plane) const;
 
 private:
     WebVideoFrame* m_webVideoFrame;
